# EVChamp

./: .env  .env.example  .env.local.template  .gitignore  BUILD_SUCCESS.md  BUYPLANS_AMOUNT_FIX_QUICK.md  BUYPLANS_PAYMENT_FIX.md  BUYPLANS_PAYMENT_SUMMARY.md  BUYPLANS_TESTING_GUIDE.md  CHARGING_STATIONS_FEATURE.md  CHARGING_STATIONS_MOVED.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL_ACTION_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFICATION.md  DIAGNOSTIC_REPORT_FEATURE.md  FCM_DEPLOYMENT_COMPLETE.md  FIREBASE_IMPLEMENTATION_SUMMARY.md  FIREBASE_PUSH_NOTIFICATION_SETUP.md  FIREBASE_QUICK_REFERENCE.md  FIX_SUMMARY_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MASTER_CHECKLIST_ALL_COMPLETE.md  PAYMENT_FIX_CHECKLIST.md  PAYMENT_FIX_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  PUSH_NOTIFICATION_IMPLEMENTATION.md  PUSH_NOTIFICATION_TESTING.md  PUSH_NOTIFICATION_TROUBLESHOOTING.md  RAZORPAY_COMPLETE_FIX_SUMMARY.md  RAZORPAY_IMPLEMENTATION_CHECKLIST.md  RAZORPAY_IMPLEMENTATION_SUMMARY.md  RAZORPAY_KEYS_SECURITY_GUIDE.md  RAZORPAY_KEY_NOT_CONFIGURED_FIX.md  RAZORPAY_LIVE_KEYS_CONFIGURED.md  RAZORPAY_PAYMENT_FIX.md  RAZORPAY_PAYMENT_SYSTEM_DELIVERY_REPORT.md  RAZORPAY_PAYMENT_SYSTEM_SUMMARY.md  RAZORPAY_QUICK_FIX.md  (+40 more)
Chatbot2.0/: .env.example  README.md  pyproject.toml  requirements.txt
Chatbot2.0/app/: main.py
Chatbot2.0/app/core/: config.py
Chatbot2.0/app/routers/v1/: chat.py
Chatbot2.0/app/schemas/: chat.py
Chatbot2.0/app/services/: gemini.py  llm_service.py  rag_service.py
Chatbot2.0/frontend/: package.json
Chatbot2.0/scripts/: ingest.py
(+269 files in other folders)
