[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "boto3>=1.28.0",
    "fastapi>=0.100.0",
    "groq==0.4.1",
    "openai>=1.0.0",
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    "pytest>=7.0.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "transformers>=4.30.0",
    "uvicorn[standard]==0.24.0",
    "passlib>=1.7.4",
]
